fix:  background color in dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -47,7 +47,7 @@
 
 :root {
     --radius: 1rem;
-    --background: oklch(1 0 0);
+    /*--background: oklch(1 0 0);*/
     --foreground: oklch(0.141 0.005 285.823);
     --card: oklch(1 0 0);
     --card-foreground: oklch(0.141 0.005 285.823);
@@ -78,6 +78,29 @@
     --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
     --sidebar-border: oklch(0.92 0.004 286.32);
     --sidebar-ring: oklch(0.623 0.214 259.815);
+    --p-primary-50: var(--color-sky-50);
+    --p-primary-100: var(--color-sky-100);
+    --p-primary-200: var(--color-sky-200);
+    --p-primary-300: var(--color-sky-300);
+    --p-primary-400: var(--color-sky-400);
+    --p-primary-500: var(--color-sky-500);
+    --p-primary-600: var(--color-sky-600);
+    --p-primary-700: var(--color-sky-700);
+    --p-primary-800: var(--color-sky-800);
+    --p-primary-900: var(--color-sky-900);
+    --p-primary-950: var(--color-sky-950);
+    --p-surface-0: #ffffff;
+    --p-surface-50: #fafafa;
+    --p-surface-100: #f4f4f5;
+    --p-surface-200: #e4e4e7;
+    --p-surface-300: #d4d4d8;
+    --p-surface-400: #a1a1aa;
+    --p-surface-500: #71717a;
+    --p-surface-600: #52525b;
+    --p-surface-700: #3f3f46;
+    --p-surface-800: #27272a;
+    --p-surface-900: #18181b;
+    --p-surface-950: #09090b;
 }
 
 .dark {
@@ -121,5 +144,19 @@
 
     body {
         @apply bg-background text-foreground;
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    :root {
+        color: var(--p-surface-900);
+        background-color: var(--p-primary-50);
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        color: var(--p-surface-100);
+        background-color: var(--p-surface-800);
     }
 }
